--- a/sass/_basic.sass
+++ b/sass/_basic.sass
@@ -4,6 +4,9 @@
 html, body
 	background-color: #ffffff
 	height: 100%
+
+html
+	background-color: #000000
 	
 body
 	+LatoRegular
@@ -14,7 +17,22 @@ body
 	overflow-x: hidden
 	opacity: 1
 	color: #ffffff
-
+	right: 0
+	transition: right .3s
+	&:after
+		content: ''
+		position: absolute
+		top: 0
+		left: 0
+		width: 100%
+		height: 100%
+		z-index: -1
+		background-color: #000000
+		opacity: 0.6
+	&.body--active
+		right: 300px
+		&:after
+			z-index: 40
 h1, h2, h3, h4, h5, h6
 	line-height: 1.4
 
@@ -35,21 +53,26 @@ header, footer, section
 	background-size: cover
 	background-position: center
 
-.main-title
-	font-size: 30px
-	color: $accent
-	+RalewayBold
-	max-width: 600px
-	margin-bottom: 40px
-
 .section
 	padding: 100px 0
 	color: $primary
 	&__title
+		font-size: 30px
+		color: $accent
+		+RalewayBold
+		max-width: 600px
+		margin: auto
+		margin-top: 0
+		text-align: center
+		margin-bottom: 25px
+		span
+			color: #ffffff
+	&__subtitle
 		font-size: 16px
 		line-height: 22px
 		+LatoBold
 		margin: auto
+		margin-top: 0
 		margin-bottom: 100px
 		text-align: center
 		max-width: 950px
@@ -59,21 +82,20 @@ header, footer, section
 	border: none
 	color: #fff
 	text-decoration: none
-	background-color: #998675
+	background-color: #131313
 	min-width: 170px
 	min-height: 50px
-	padding: 20px 35px
+	padding: 15px 34px
 	line-height: 1
-	font-size: 14px
+	font-size: 20px
 	text-transform: uppercase
 	+RalewayMedium
-	border-radius: 3px
 	text-align: center
 	position: relative
 	outline: none
-	box-shadow: 0 3px 0 #736357
 	transition: all .3s
-	margin-top: 50px
+	margin-right: 30px
 	&:hover
-		box-shadow: 0 0 0 #736357
-		background-color: darken(#998675, 10%)
+		background-color: $accent
+	&:last-child
+		margin-right: 0
