Features section done + adaptive

--- a/sass/_basic.sass
+++ b/sass/_basic.sass
@@ -91,6 +91,7 @@ header, footer, section
 		width: 34%
 		height: 1px
 		background-color: $secondary
+		z-index: 5
 	&:before
 		content: ''
 		position: absolute
@@ -100,6 +101,7 @@ header, footer, section
 		height: 18px
 		clip-path: polygon(25% 0,75% 0,100% 50%,75% 100%,25% 100%,0 50%)
 		background-color: $secondary
+		z-index: 5
 
 .btn
 	display: inline-block
