Options section done + adaptive

--- a/sass/_basic.sass
+++ b/sass/_basic.sass
@@ -80,6 +80,7 @@ header, footer, section
 		b
 			color: $accent
 	&--white
+		background-color: #fff
 		.section__title
 			span
 				color: #000000
