--- a/sass/blocks/_clients.sass
+++ b/sass/blocks/_clients.sass
@@ -1,14 +1,21 @@
 .clients
-  &:after
-    content: ''
-    position: absolute
-    top: 0
-    left: 0
-    width: 100%
-    height: 100%
-    background-color: #000000
-    opacity: 0.93
-    z-index: 5
+  padding: 0
+  &:after, &:before
+    background-color: $accent
+    z-index: 50
+  .cover
+    position: relative
+    padding: 100px 0
+    &:after
+      content: ''
+      position: absolute
+      top: 0
+      left: 0
+      width: 100%
+      height: 100%
+      background-color: #000000
+      opacity: 0.93
+      z-index: 5
   &__wrap
     position: relative
     z-index: 10
@@ -126,3 +133,10 @@
       justify-content: space-around
       &-block
         margin-bottom: 20px
+    .cover
+      padding: 80px 0
+
+@media (max-width: 992px)
+  .clients
+    .cover
+      padding: 50px 0
